added user routes
